# R-Type-CI

./: .gitignore  .gitmodules  Build-and-manage-packages_8md.html  CMakeLists.txt  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CODE__OF__CONDUCT_8md.html  CONTRIBUTING.md  CONTRIBUTING_8md.html  Client_8cpp.html  Client_8hpp.html  Client_8hpp.js  Client_8hpp_source.html  ComponentManager_8hpp.html  ComponentManager_8hpp.js  ComponentManager_8hpp_source.html  Config_8cpp.html  Config_8hpp.html  Config_8hpp.js  Config_8hpp_source.html  Doxyfile  ECS_8hpp.html  ECS_8hpp_source.html  ECS_8md.html  Enemy_8cpp.html  Enemy_8hpp.html  Enemy_8hpp.js  Enemy_8hpp_source.html  EntityManager_8hpp.html  EntityManager_8hpp.js  EntityManager_8hpp_source.html  Home_8md.html  InputHandler_8hpp.html  InputHandler_8hpp.js  InputHandler_8hpp_source.html  InputSystem_8cpp.html  InputSystem_8hpp.html  InputSystem_8hpp.js  InputSystem_8hpp_source.html  Isomorphic-code_8md.html  (+345 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.md  README.md  build.yml  ci.yml  doxygen.yml  lint.yml  main.yml  mirror.yml  release.yml  super-linter.yml
.github/workflows/conan/: ubuntu-latest.conf  windows-latest.conf
.github/workflows/executables/: glib_checker
client/: CMakeLists.txt
client/src/: main.cpp
common/: CMakeLists.txt
common/include/: EntityManager.hpp
common/src/: foo.cpp
include/: ComponentManager.hpp  ECS.hpp  SparseSet.hpp  Structure.hpp  Structures.hpp  SystemManager.hpp  Systems.hpp  ThreadPool.hpp  foo.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_13.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  (+77 more)
server/: CMakeLists.txt
server/src/: main.cpp
src/: ComponentManager.hpp  EntityManager.hpp  SparseSet.hpp  SystemManager.hpp  main.cpp
src/Components/: Player.cpp  Player.hpp
src/ECS/: ComponentManager.hpp  EntityManager.hpp  SparseSet.hpp  SystemManager.hpp
src/RType/: RType.cpp  RType.hpp
src/RType/Client/: Client.cpp  Client.hpp
src/RType/Components/: Enemy.cpp  Enemy.hpp  InputHandler.hpp  Player.cpp  Player.hpp  Window.cpp  Window.hpp
src/RType/Config/: Config.cpp  Config.hpp
src/RType/Game/: Game.cpp  Game.hpp
src/RType/ModeManager/: ModeManager.cpp  ModeManager.hpp
src/RType/Network/TCPNetwork/: TCPNetwork.cpp  TCPNetwork.hpp
src/RType/Network/UDPNetwork/: UDPNetwork.cpp  UDPNetwork.hpp
src/RType/Server/Network/UDPServer/: UDPServer.cpp  UDPServer.hpp
src/RType/System/: RenderWindow.cpp  RenderWindow.hpp
src/RType/ThreadPool/: ThreadPool.cpp  ThreadPool.hpp
src/System/: Movement.cpp  Movement.hpp
src/Systems/: InputSystem.cpp  InputSystem.hpp  Movement.cpp  Movement.hpp  Network.cpp  Network.hpp  RenderWindow.cpp  RenderWindow.hpp
